--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,11 +1,12 @@
-body {
+html, body {
     padding: 0;
     margin: 0;
+    width: 100%;
+    height: 100%;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 #root {
-    margin: 35px;
-    padding: 35px;
     background-color: #d8d8d8;
+    height: 100%;
 }
