header content and footer added and positioned

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,9 +2,43 @@ html, body {
     
     padding: 0;
     margin: 0;
+    height: 100%;
+}
+
+#root {
+
+    height: 100%;
 }
 
 .main-wrapper {
 
-    background-color: red;
+    border-bottom: 1px solid gray;
+    display: flex;
+    flex-flow: column;
+    justify-content: space-between;
+    box-sizing: border-box;
+    height: 100%;
+
+    header {
+        width: 100%;
+        height: 70px;
+        border: 1px solid gray;
+        box-sizing: border-box;
+
+        h3 {
+            margin-left: 15px;
+        }
+    }
+
+    content {
+        border: 1px solid red;
+        height: 100%;
+    }
+
+    footer {
+        width: 100%;
+        height: 50px;
+        border-top: 1px solid gray;
+        box-sizing: border-box;
+    }
 }
